--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@
 
 body {
   line-height: 1.6;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 h1 {
@@ -46,6 +53,10 @@ form {
   cursor: pointer;
   border-radius: 5px;
   margin-left: 10px;
+}
+
+#search-button:hover{
+    background-color: #18a582;
 }
 
 .search-results {
@@ -101,6 +112,38 @@ form {
   display: none;
 }
 
+#show-more-button:hover{
+    background-color: #0e9bca;
+}
+
+.titledownload {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+} */
+
+/* display: flex;
+justify-content: center;
+position: sticky;
+bottom: 0;
+background-color: white;
+font-size: 14px; */
+
+footer{
+    display: flex;
+    justify-content: center;
+}
+
+
+/* Responsive Design */
 @media screen and (max-width: 768px) {
   .search-results {
     padding: 20px;
